src/test/compile-fail/issue-2123.rs
use x = m::f; //~ ERROR failed to resolve import

mod m {
    #[legacy_exports];
}

fn main() {
}
